# local-ai-control-center-stable

./: .gitignore  README.md  SHA256SUMS-v0.4.85.txt  SHA256SUMS-v0.4.86.txt  pyproject.toml  release-notes-v0.4.85.md  release-notes-v0.4.86.md  release-notes-v0.4.93.md
bootstrap/: install.ps1  install.sh
docs/: tuning-lab-batch-01-game-prompts.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
packaging/: build_windows_installer.ps1  publish_github_release.ps1  windows_installer_entry.py
tests/: conftest.py  test_action_result_panel_layout.py  test_advanced_page_ui_regressions.py  test_apply_phase.py  test_control_center_benchmark.py  test_control_center_benchmark_routes.py  test_control_center_browser_catalog_service.py  test_control_center_browser_routes.py  test_control_center_browser_sources.py  test_control_center_compatibility.py  test_control_center_fleet.py  test_control_center_frontend_dist.py  test_control_center_jobs.py  test_control_center_knowledge.py  test_control_center_knowledge_routes.py  test_control_center_model_downloads.py  test_control_center_models_service.py  test_control_center_network.py  test_control_center_observability.py  test_control_center_opencode.py  test_control_center_package.py  test_control_center_panel.py  test_control_center_project_memory.py  test_control_center_project_memory_routes.py  test_control_center_repair.py  test_control_center_runtime.py  test_control_center_runtime_deploy.py  test_control_center_runtime_proxy.py  test_control_center_search_provider.py  test_control_center_search_routes.py  test_control_center_search_service.py  test_control_center_server.py  test_control_center_settings.py  test_control_center_startup.py  test_control_center_state_helpers.py  test_control_center_static_serving.py  test_control_center_status.py  test_control_center_system_service.py  test_control_center_tuning_lab.py  test_control_center_tuning_lab_routes.py  (+30 more)
(+1127 files in other folders)
