[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-control-center-installer"
version = "0.1.11"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
release = ["build>=1.5.0", "pyinstaller>=6.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.package-data]
local_ai_control_center_installer = ["manifests/*.json"]
