[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-control-center-installer"
version = "0.4.3"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn>=0.35"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
release = ["build>=1.5.0", "pyinstaller>=6.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-data]
local_ai_control_center_installer = [
  "manifests/*.json",
  "control_center_backend/frontend_dist/*",
  "control_center_backend/frontend_dist/assets/*",
  "turboquant_sidecars/*",
  "turboquant_sidecars/*/*",
]
